src/objects/Glxy_DoubleRent__c.object
<CustomObject>
    <fields>
        <fullName>Apr_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apr NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Associated_Leases_Projects_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Leases/Projects</label>
        <referenceTo>Glxy_AssociatedLeases__c</referenceTo>
        <relationshipLabel>Double Rents</relationshipLabel>
        <relationshipName>Double_Rents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aug_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Aug NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dec NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FYAndId__c</fullName>
        <externalId>true</externalId>
        <label>FYAndId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_IA__c</fullName>
        <formula>Apr_IA__c + May_IA__c + Jun_IA__c + Jul_IA__c + Aug_IA__c + Sep_IA__c + Oct_IA__c + Nov_IA__c + Dec_IA__c + JAN_IA__c + Feb_IA__c + Mar_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Obligation IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation_NOA__c</fullName>
        <formula>Apr_NOA__c + May_NOA__c + Jun_NOA__c + Jul_NOA__c + Aug_NOA__c + Sep_NOA__c + Oct_NOA__c + Nov_NOA__c + Dec_NOA__c + JAN_NOA__c + Feb_NOA__c + Mar_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Obligation NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FY_Obligation__c</fullName>
        <formula>FY_Obligation_IA__c + FY_Obligation_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Obligation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Feb NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JAN_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JAN_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jan NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jul NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Jun NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mar NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>May NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Nov NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Oct NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_IA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep IA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_NOA__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sep NOA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Double Rent</label>
    <nameField>
        <displayFormat>DR-{000000}</displayFormat>
        <label>Double Rent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Double Rents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>